Fix progress bar wrong position in firefox

--- a/src/catalogue/styles/Download.css
+++ b/src/catalogue/styles/Download.css
@@ -28,7 +28,6 @@
     margin: 4rem 0;
     text-align: center;
     width: 25%;
-    height: 25%;
 }
 
 .download-progress-circle {
